[package]
name = "robusto"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "basic_c_ragel_generation_from_bpir"
path = "src/bin/test_examples/basic_c_ragel_generation_from_bpir.rs"

[target.basic_c_ragel_generation_from_bpir.dependencies]
env_logger = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "0.4.19"
